--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,42 @@
 /dist
 .env
+.env.*
 .DS_Store
 /uploads
 /node_modules
 yarn-error.log
-
+npm-debug.log*
+*.log
+*.tsbuildinfo
 .idea
-
+.vscode/
+.cursor/
 coverage
-
-!src/**
-
+.coverage
+.nyc_output
+.parcel-cache
+.turbo/
+.next/
 ./tsconfig.tsbuildinfo
 medusa-db.sql
 build
 .cache
-
+.tmp
+tmp
+temp
+Thumbs.db
+ehthumbs.db
+Icon?
+Desktop.ini
+*.swp
+*.swo
+*.bak
+*.tmp
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
-
-.medusa
+.medusa/
+package-lock.json
