--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   ],
   "scripts": {
     "build": "medusa build",
+    "postbuild": "rm -rf public && cp -R .medusa/server/public public",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
+    "worker": "medusa worker",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
+    "@medusajs/admin": "2.8.6",
     "@medusajs/admin-sdk": "2.8.6",
     "@medusajs/cli": "2.8.6",
     "@medusajs/framework": "^2.8.6",
